<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lifecycle_example</name>
  <version>0.0.0</version>
  <description>ROS 2 packages for lifecycle_example</description>

  <maintainer email="jhshim@robotis.com">Jaehyun Shim</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/JaehyunShim/ros2_tutorial</url>
  <author email="jhshim@robotis.com">Jaehyun Shim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rcutils</depend>
  <depend>std_msgs</depend>

  <!-- For testing and linting-->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
