<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_tutorial_cpp</name>
  <version>0.0.0</version>
  <description>ROS 2 packages for ros2_tutorial_cpp</description>
  <maintainer email="jhshim@robotis.com">Jaehyun Shim</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/JaehyunShim/ros2_tutorial</url>
  <author email="jhshim@robotis.com">Jaehyun Shim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>topic_example</exec_depend>
  <exec_depend>service_example</exec_depend>
  <exec_depend>action_example</exec_depend>
  <exec_depend>param_example</exec_depend>
  <exec_depend>interface_example</exec_depend>
  <exec_depend>intra_process_example</exec_depend>
  <exec_depend>launch_example</exec_depend>
  <exec_depend>lifecycle_example</exec_depend>
  <exec_depend>plugin_example</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
